BJS2-54229 Удаление просроченных реклам постов. С исправленными тестами и решенным конфликтом